bad/mod_invalid_types_class_class.example_compiler_output
ERROR
[1mbad/mod_invalid_types_class_class.lat:6:4: [1;31merror: [0;1mmodulo is defined only for int values, not `X` and `X`[m
	x % x;
	  [1;32m^[m
